# nexus-tools

./: CMakeLists.txt  CopyBinary.cmake  SourceGroups.cmake  UserSettings.cmake  build_linux_release.sh  build_linux_static_release.sh  run_tests.sh  tutorial.txt
5PrimeEndCounter/: 5PrimeEndCounter.cpp  CMakeLists.txt
MappingAnalyzer/: CMakeLists.txt  MappingAnalyzer.cpp
data/: adapters.fa  adapters_best.fa  adapters_best_short.fa  barcodes.fa
flexbar++/: CMakeLists.txt
flexcat/: CMakeLists.txt  adapter_trimming.h  argument_parser.h  flexcat.cpp  flexlib.cpp  general_stats.h  produce_transform_consume.h  ptc.h  read_reader.h  read_trimming.h  read_writer.h  semaphore.h  test_adapter.cpp
nexcat/: CMakeLists.txt
nexus-pre/: BamRecordKey.h  CMakeLists.txt  nexus-pre.cpp  nexus-pre.h  peak.h
readsim/: CMakeLists.txt  readsim.cpp
scripts/: bam_indexer.py  combine_files.bat  extract_sequences.sh  graph_duplication_rate.r  init_path.bat  map.bat  map_bowtie.bat  motif_analysis.sh  preprocess.py  preprocess_best.py  preprocessing.bat
shared_headers/: BamRecordKey.h  peak.h
test-app/: CMakeLists.txt  test-app.cpp
ting/: CMakeLists.txt  ting.cpp
